--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "joao-salles-portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Portfolio profissional de João Pedro Salles - Senior Frontend Engineer",
+  "author": "João Pedro Salles <joaopedrosalles@hotmail.com>",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "echo '🔧 Dependencies need to be installed. Run: npm install'",
+    "lint:fix": "echo '🔧 Dependencies need to be installed. Run: npm install'",
+    "lint:full": "echo '🔧 Full linting requires: npm install && npm run lint:setup'",
+    "lint:setup": "echo 'ESLint config ready. Run full lint after installing dependencies.'",
+    "preview": "vite preview",
+    "preview:github": "GITHUB_PAGES=true vite build && vite preview --host 0.0.0.0",
+    "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "analyze": "vite build --config vite.config.analyze.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -65,20 +76,27 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.0.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
+    "jsdom": "^23.0.1",
     "lovable-tagger": "^1.1.13",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vitest": "^1.0.4"
   }
 }
