--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "echo '🔧 Dependencies need to be installed. Run: npm install'",
-    "lint:fix": "echo '🔧 Dependencies need to be installed. Run: npm install'",
-    "lint:full": "echo '🔧 Full linting requires: npm install && npm run lint:setup'",
-    "lint:setup": "echo 'ESLint config ready. Run full lint after installing dependencies.'",
+    "lint": "tsc --noEmit --skipLibCheck",
+    "lint:fix": "echo 'Lint fix not implemented yet'",
     "preview": "vite preview",
     "preview:github": "GITHUB_PAGES=true vite build && vite preview --host 0.0.0.0",
     "type-check": "tsc --noEmit",
