--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -1,17 +1,17 @@
 {
   "ci": {
     "collect": {
-      "startServerCommand": "npm run preview",
+      "startServerCommand": "npm run dev",
       "startServerReadyPattern": "Local:\\s+(https?://.+)",
-      "url": ["http://localhost:4173"],
+      "url": ["http://127.0.0.1:5173/", "http://127.0.0.1:5173/about"],
       "numberOfRuns": 3
     },
     "assert": {
       "assertions": {
-        "categories:performance": ["error", {"minScore": 0.9}],
-        "categories:accessibility": ["error", {"minScore": 0.9}],
-        "categories:best-practices": ["error", {"minScore": 0.9}],
-        "categories:seo": ["error", {"minScore": 0.9}],
+        "categories:performance": ["error", { "minScore": 0.9 }],
+        "categories:accessibility": ["error", { "minScore": 0.9 }],
+        "categories:best-practices": ["error", { "minScore": 0.9 }],
+        "categories:seo": ["error", { "minScore": 0.9 }],
         "categories:pwa": "off"
       }
     },
