--- a/package.json
+++ b/package.json
@@ -9,15 +9,31 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "tsc --noEmit --skipLibCheck",
-    "lint:fix": "echo 'Lint fix not implemented yet'",
+    "lint": "eslint --ext .ts,.tsx src --max-warnings 0",
+    "lint:fix": "eslint --ext .ts,.tsx src --fix",
     "preview": "vite preview",
     "preview:github": "GITHUB_PAGES=true vite build && vite preview --host 0.0.0.0",
     "type-check": "tsc --noEmit",
+    "type-check:strict": "tsc -p tsconfig.strict.json --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
-    "analyze": "vite build --config vite.config.analyze.ts"
+    "analyze": "vite build --config vite.config.analyze.ts",
+    "e2e": "playwright test",
+    "e2e:headed": "playwright test --headed",
+    "lhci": "lhci autorun --upload.target=temporary-public-storage",
+    "prepare": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -87,6 +103,13 @@
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^14.0.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "@playwright/test": "^1.43.1",
+    "@axe-core/playwright": "^4.7.1",
     "globals": "^15.15.0",
     "jsdom": "^23.0.1",
     "lovable-tagger": "^1.1.13",
