--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
       - name: Run e2e tests
-        run: npm run e2e
+        run: npm run e2e:ci
 
   lhci:
     runs-on: ubuntu-latest
