ci: add workflow_dispatch to allow manual CI runs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main]
+  # Manual trigger to run CI jobs from the Actions UI
+  workflow_dispatch:
 
 jobs:
   test:
