ci: make LHCI use built dist (staticDir) and run only on push

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "e2e": "playwright test",
     "e2e:ci": "playwright test --project=chromium --reporter=list",
     "e2e:headed": "playwright test --headed",
-    "lhci": "lhci autorun --upload.target=temporary-public-storage",
+    "lhci": "lhci autorun --upload.target=temporary-public-storage --collect.staticDistDir=dist",
     "prepare": "husky install"
   },
   "husky": {
