--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,8 @@ jobs:
 
   lhci:
     runs-on: ubuntu-latest
+    # Run LHCI only on push events to avoid running in every PR
+    if: github.event_name == 'push'
     needs: build
     steps:
       - name: Checkout code
