--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "e2e": "playwright test",
     "e2e:ci": "playwright test --project=chromium --reporter=list",
     "e2e:headed": "playwright test --headed",
-    "lhci": "lhci autorun --upload.target=temporary-public-storage --collect.staticDistDir=dist",
+    "lhci": "npx lhci autorun --upload.target=temporary-public-storage --collect.staticDistDir=dist",
     "prepare": "husky install"
   },
   "husky": {
@@ -120,6 +120,5 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
     "vitest": "^1.0.4"
-    ,"lhci": "^0.11.0"
   }
 }
