--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "e2e:ci": "playwright test --project=chromium --reporter=list",
     "e2e:headed": "playwright test --headed",
     "lhci": "npx lhci autorun --upload.target=temporary-public-storage --collect.staticDistDir=dist",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cz": "cz",
+    "commit": "cz"
   },
   "husky": {
     "hooks": {
@@ -89,7 +91,9 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
     "@eslint/js": "^9.32.0",
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
@@ -100,25 +104,32 @@
     "@vitejs/plugin-react-swc": "^3.11.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.0.4",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "autoprefixer": "^10.4.21",
+    "commitizen": "^4.3.1",
+    "cz-git": "^1.12.0",
     "eslint": "^9.32.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-config-prettier": "^9.0.0",
-    "prettier": "^3.0.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^14.0.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "@playwright/test": "^1.57.0",
-    "@axe-core/playwright": "^4.11.0",
     "globals": "^15.15.0",
+    "husky": "^8.0.0",
     "jsdom": "^23.0.1",
+    "lint-staged": "^14.0.0",
     "lovable-tagger": "^1.1.13",
     "postcss": "^8.5.6",
+    "prettier": "^3.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
     "vitest": "^1.0.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-git"
+    }
   }
 }
