--- a/codecov.yml
+++ b/codecov.yml
@@ -14,6 +14,6 @@ coverage:
         threshold: 1
         informational: false
 comment:
-  layout: "header, diff, files"
+  layout: 'header, diff, files'
   behavior: default
   require_changes: false
