--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,19 @@ jobs:
       - name: Install dependencies
         run: PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 npm ci
 
-      - name: Validate commits with commitlint
-        if: ${{ github.actor != 'dependabot[bot]' && github.actor != 'github-actions[bot]' }}
-        uses: wagoid/commitlint-github-action@v5
-        with:
-          configFile: commitlint.config.cjs
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Validate commits with commitlint (PR)
+        if: ${{ github.event_name == 'pull_request' && github.actor != 'dependabot[bot]' && github.actor != 'github-actions[bot]' }}
+        run: |
+          npx --no commitlint --config commitlint.config.mjs \
+            --from "${{ github.event.pull_request.base.sha }}" \
+            --to   "${{ github.sha }}" -V
+
+      - name: Validate commits with commitlint (Push)
+        if: ${{ github.event_name == 'push' && github.actor != 'dependabot[bot]' && github.actor != 'github-actions[bot]' }}
+        run: |
+          npx --no commitlint --config commitlint.config.mjs \
+            --from "${{ github.event.before }}" \
+            --to   "${{ github.sha }}" -V
 
       - name: Lint
         run: npm run lint
@@ -51,7 +57,7 @@ jobs:
         run: node scripts/check-coverage.js
 
       - name: Upload coverage to Codecov
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' || (github.event_name == 'pull_request' && !github.event.pull_request.head.repo.fork)
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
