--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "e2e:ci": "playwright test --project=chromium --reporter=list",
     "e2e:headed": "playwright test --headed",
     "lhci": "npx lhci autorun --upload.target=temporary-public-storage --collect.staticDistDir=dist",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "prepare": "husky install",
     "cz": "cz",
     "commit": "cz"
@@ -94,6 +96,11 @@
     "@axe-core/playwright": "^4.11.0",
     "@eslint/js": "^9.32.0",
     "@playwright/test": "^1.57.0",
+    "@storybook/addon-a11y": "^10.1.10",
+    "@storybook/addon-docs": "^10.1.10",
+    "@storybook/addon-vitest": "^10.1.10",
+    "@storybook/react": "^10.1.10",
+    "@storybook/react-vite": "^10.1.10",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
@@ -102,8 +109,9 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.0.4",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "commitizen": "^4.3.1",
     "cz-git": "^1.12.0",
@@ -112,18 +120,21 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-storybook": "10.1.10",
     "globals": "^15.15.0",
     "husky": "^8.0.0",
     "jsdom": "^23.0.1",
     "lint-staged": "^14.0.0",
     "lovable-tagger": "^1.1.13",
+    "playwright": "^1.57.0",
     "postcss": "^8.5.6",
     "prettier": "^3.0.0",
+    "storybook": "^10.1.10",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
-    "vitest": "^1.0.4"
+    "vitest": "^3.2.4"
   },
   "config": {
     "commitizen": {
