refactor(chore): enhance pre-commit hooks and improve code quality
Add and enhance Git hooks for better code quality:

- Enhanced pre-commit hook with multi-step validation
  * Step 1: lint-staged (ESLint + Prettier on staged files)
  * Step 2: type-check (TypeScript validation)
  * Clear success/failure feedback with emojis

- Add commit-msg hook for Conventional Commits
  * Validates message format (type(scope): message)
  * Warns if first line exceeds 72 characters
  * Helpful error messages with examples

- Improve lint-staged configuration in package.json
  * ESLint + Prettier for TypeScript/TSX files
  * Prettier for JSON and Markdown files
  * Comprehensive file coverage

- Document in CONTRIBUTING.md
  * Explain each validation step
  * Usage examples and workflow
  * Bypass options for edge cases
  * Integrated with existing documentation

This ensures code quality consistency and standardized commit messages.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,13 @@
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
       "eslint --fix",
-      "git add"
+      "prettier --write"
+    ],
+    "*.json": [
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write"
     ]
   },
   "dependencies": {
