--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,6 +161,29 @@ jobs:
       - name: Run Lighthouse CI (temporary storage)
         run: npm run lhci
 
+  # Summary job - reports final status
+  summary:
+    if: always()
+    runs-on: ubuntu-latest
+    needs: [test, build, e2e, lhci]
+    steps:
+      - name: Check test status
+        if: needs.test.result == 'failure'
+        run: |
+          echo "❌ Test job failed"
+          exit 1
+
+      - name: Check build status
+        if: needs.build.result == 'failure'
+        run: |
+          echo "❌ Build job failed"
+          exit 1
+
+      - name: Report successful CI
+        run: |
+          echo "✅ CI Pipeline completed successfully"
+          echo "All checks passed!"
+
   # NOTE: Deploy is handled by the dedicated `.github/workflows/deploy.yml` workflow.
   # The deploy job was removed from this workflow to avoid duplicate deployments
   # and potential conflicts with Dependabot PR behavior.
