--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,31 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Check EmailJS secrets
+        run: |
+          if [ -z "${{ secrets.VITE_EMAILJS_SERVICE_ID }}" ]; then
+            echo "::warning::VITE_EMAILJS_SERVICE_ID is not set"
+          else
+            echo "✓ VITE_EMAILJS_SERVICE_ID is set"
+          fi
+          if [ -z "${{ secrets.VITE_EMAILJS_TEMPLATE_ID }}" ]; then
+            echo "::warning::VITE_EMAILJS_TEMPLATE_ID is not set"
+          else
+            echo "✓ VITE_EMAILJS_TEMPLATE_ID is set"
+          fi
+          if [ -z "${{ secrets.VITE_EMAILJS_PUBLIC_KEY }}" ]; then
+            echo "::warning::VITE_EMAILJS_PUBLIC_KEY is not set"
+          else
+            echo "✓ VITE_EMAILJS_PUBLIC_KEY is set"
+          fi
+
+      - name: Verify environment variables
+        run: node scripts/check-env.js
+        env:
+          VITE_EMAILJS_SERVICE_ID: ${{ secrets.VITE_EMAILJS_SERVICE_ID }}
+          VITE_EMAILJS_TEMPLATE_ID: ${{ secrets.VITE_EMAILJS_TEMPLATE_ID }}
+          VITE_EMAILJS_PUBLIC_KEY: ${{ secrets.VITE_EMAILJS_PUBLIC_KEY }}
+
       - name: Build
         run: npm run build
         env:
